--- a/functions/package.json
+++ b/functions/package.json
@@ -16,8 +16,11 @@
   "dependencies": {
     "body-parser": "^1.20.1",
     "express": "^4.18.2",
+    "firebase": "^9.13.0",
     "firebase-admin": "^10.0.2",
-    "firebase-functions": "^3.18.0"
+    "firebase-functions": "^3.18.0",
+    "formidable-serverless": "^1.1.1",
+    "uuid-v4": "^0.1.0"
   },
   "devDependencies": {
     "@faker-js/faker": "^7.6.0",
